# ai-convos-db

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: tests.yml
apps/changegraph/: README.md  pyproject.toml
apps/changegraph/src/ai_convos_changegraph/: __init__.py  tui.py
apps/provenance/: pyproject.toml
apps/provenance/src/ai_convos_provenance/: __init__.py
apps/remote/: pyproject.toml
apps/remote/src/ai_convos_remote/: __init__.py  control.py  projection.py  protocol.py  provenance.py  service.py
apps/remote_projection/: pyproject.toml
apps/remote_projection/src/ai_convos_remote_projection/: __init__.py
apps/remote_protocol/: pyproject.toml
apps/remote_server/: pyproject.toml
apps/remote_server/src/ai_convos_remote_server/: __init__.py
apps/remote_service/: pyproject.toml
apps/remote_service/src/ai_convos_remote_service/: __init__.py
docs/: architecture.md  chatgpt-integration.md  claude-code-integration.md  claude-integration.md  codex-integration.md  database.md  remote.md  skills-setup.md
docs/specs/: 00-overview.md  01-foundation-core.md  02-change-graph.md  03-web-ingest.md  04-remote-sync.md
evals/: retrieval.py
examples/insights/: README.md
examples/remote/: README.md  demo.py
scripts/: install.sh  recover_orphans.py  uv
skills/agent-convos/: SKILL.md
src/ai_convos/: browser.py  cli.py
tests/: __init__.py  test_budget.py  test_changegraph.py  test_hooks.py  test_hybrid.py  test_integrations.py  test_parsers.py  test_provenance.py  test_remote_acceptance.py  test_remote_client.py  test_remote_control.py  test_remote_examples.py  test_remote_operations.py  test_remote_projection.py  test_remote_protocol.py  test_remote_server.py
