[project]
name = "ai-convos-db"
version = "0.1.0"
description = "DuckDB-backed searchable archive for Claude + ChatGPT conversations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.0.0",
    "typer>=0.12.0",
    "cryptography>=42.0.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
convos = "ai_convos:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/ai-convos-db/skills/agent-convos" = ["skills/agent-convos/SKILL.md"]

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: marks tests as integration tests (may hit real APIs)", "slow: marks tests as slow"]
