[project]
name = "ai-convos-remote"
version = "0.1.0"
description = "Encrypted personal and team synchronization client for ai-convos-db"
license = "MIT"
requires-python = ">=3.12"
dependencies = ["ai-convos-db", "cryptography>=42.0.0", "typer>=0.12.0"]

[project.entry-points."convos.commands"]
remote = "ai_convos_remote:register"

[project.entry-points."convos.doctor"]
remote = "ai_convos_remote:doctor_status"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
ai-convos-db = { workspace = true }
