[project]
name = "ai-convos-remote-projection"
version = "0.1.0"
description = "Rebuildable local projection for ai-convos-db remote events"
license = "MIT"
requires-python = ">=3.12"
dependencies = ["ai-convos-db", "ai-convos-provenance", "ai-convos-remote-protocol"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
ai-convos-db = { workspace = true }
ai-convos-provenance = { workspace = true }
ai-convos-remote-protocol = { workspace = true }
