[project]
name = "ai-convos-remote-protocol"
version = "0.1.0"
description = "Versioned encrypted event protocol for ai-convos-db remote synchronization"
license = "MIT"
requires-python = ">=3.12"
dependencies = ["cryptography>=42.0.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
