[project]
name = "ai-convos-remote-server"
version = "0.1.0"
description = "Self-hosted opaque event relay for ai-convos-db"
license = "MIT"
requires-python = ">=3.12"
dependencies = ["ai-convos-remote-protocol"]

[project.scripts]
convos-server = "ai_convos_remote_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
ai-convos-remote-protocol = { workspace = true }
