[project]
name = "ai-convos-remote-server"
version = "0.6.0"
description = "Self-hosted opaque event relay for ai-convos-db"
license = "MIT"
requires-python = ">=3.12"
dependencies = ["cryptography>=42.0.0"]

[project.scripts]
convos-server = "ai_convos_remote_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
