[project]
name = "ai-convos-remote-service"
version = "0.1.0"
description = "Background service and agent hook installation for ai-convos remote"
license = "MIT"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
